--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "calendar": "^0.1.1",
     "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^4.1.0",
@@ -51,9 +52,8 @@
     "react-toastify": "^10.0.5",
     "recharts": "2.9.0",
     "styled-components": "^6.1.11",
-    "sweetalert2": "^11.11.0",
-    "use-debounce": "9.0.4",
-    "xlsx": "^0.18.5"
+    "sweetalert2": "^11.6.13",
+    "use-debounce": "9.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
