--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "recharts": "2.9.0",
+    "siemensnext14dashboard": "file:",
     "styled-components": "^6.1.11",
     "sweetalert2": "^11.6.13",
     "use-debounce": "9.0.4"
