--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "es6-promise": "^4.2.8",
+    "framer-motion": "^12.7.4",
     "frappe-gantt": "^0.8.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
