--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@babel/polyfill": "^7.12.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.15",
     "@mapbox/node-pre-gyp": "^1.0.11",
     "@mui/material": "^6.4.2",
@@ -36,11 +37,13 @@
     "lucide-react": "^0.446.0",
     "lz-string": "^1.5.0",
     "mock-aws-s3": "^4.0.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.6.2",
     "mongoose": "^8.0.0",
     "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.3",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.19.2",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
