--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mapbox/node-pre-gyp": "^1.0.11",
     "@mui/material": "^6.4.2",
     "@next/eslint-plugin-next": "14.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
