--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@chakra-ui/react": "^3.21.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fullcalendar/core": "^6.1.17",
@@ -31,7 +32,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "es6-promise": "^4.2.8",
-    "framer-motion": "^12.7.4",
+    "framer-motion": "^12.18.1",
     "frappe-gantt": "^0.8.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
