--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,23 @@
 {
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2017,
+    "sourceType": "module"
+  },
   "extends": [
     "eslint:recommended",
     "next/core-web-vitals"
   ],
+  "plugins": [
+    "import"
+  ],
   "rules": {
     "react/prop-types": "off",
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "import/no-unresolved": "off"
   }
 }
