--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "recharts": "2.9.0",
+    "sharp": "^0.34.2",
     "siemensnext14dashboard": "file:",
     "styled-components": "^6.1.11",
     "sweetalert2": "^11.6.13",
@@ -66,6 +67,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "8",
     "eslint-config-next": "14.0.1",
+    "eslint-plugin-import": "^2.32.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13"
   }
